Fix logo alignment issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -406,7 +406,7 @@ a {
   .navbar-brand img {
     width: 145px;
     position: relative;
-    top: 7px;
+    top: 4px;
   }
   .trusted-by img {
     height: 25px;
